# mqrcode

./: .gitignore  Cargo.toml
src/: data.rs  lib.rs
