[package]
name = "mqrcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = "0.12.0"
image = "0.23.14"
base64 = "0.13.0"
more-asserts = "0.3.0"
serde =  { version = "1.0.144", features = ["derive"] }
